--- a/quizWeb/package.json
+++ b/quizWeb/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@ctrl/tinycolor": "^4.1.0",
+    "chart.js": "^4.4.8",
     "ng-zorro-antd": "^18.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
